src/test/resources/failing/fail66.pnd
@text P(x) <- foo 1 is ok